// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationPicker Component Basic Rendering should match snapshot in loading state 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginBottom": 16,
          "textTransform": "uppercase",
        },
        {
          "color": "#768079",
        },
      ]
    }
  >
    LOCATION
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <ActivityIndicator
      color="#1A2520"
      size="small"
    />
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#4A5751",
          },
        ]
      }
    >
      Getting your location...
    </Text>
  </View>
</View>
`;

exports[`LocationPicker Component Error State should match snapshot in error state 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginBottom": 16,
          "textTransform": "uppercase",
        },
        {
          "color": "#768079",
        },
      ]
    }
  >
    LOCATION
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 12,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F5DDD2",
          "borderRadius": 24,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <Ionicons
        color="#8A2E1B"
        name="location-outline"
        size={24}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#8A2E1B",
          },
        ]
      }
    >
      Failed to get location
    </Text>
    <TouchableOpacity
      onPress={[MockFunction]}
      style={
        [
          {
            "borderRadius": 28,
            "paddingHorizontal": 24,
            "paddingVertical": 10,
          },
          {
            "backgroundColor": "#1A2520",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Retry
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`LocationPicker Component Error State should match snapshot in error state with location data 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginBottom": 16,
          "textTransform": "uppercase",
        },
        {
          "color": "#768079",
        },
      ]
    }
  >
    LOCATION
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "gap": 12,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F5DDD2",
          "borderRadius": 24,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <Ionicons
        color="#8A2E1B"
        name="location-outline"
        size={24}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#8A2E1B",
          },
        ]
      }
    >
      Failed to get location
    </Text>
    <TouchableOpacity
      onPress={[MockFunction]}
      style={
        [
          {
            "borderRadius": 28,
            "paddingHorizontal": 24,
            "paddingVertical": 10,
          },
          {
            "backgroundColor": "#1A2520",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
      >
        Retry
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`LocationPicker Component Loading State should match snapshot with location but loading state 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginBottom": 16,
          "textTransform": "uppercase",
        },
        {
          "color": "#768079",
        },
      ]
    }
  >
    LOCATION
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "paddingVertical": 16,
      }
    }
  >
    <ActivityIndicator
      color="#1A2520"
      size="small"
    />
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#4A5751",
          },
        ]
      }
    >
      Getting your location...
    </Text>
  </View>
</View>
`;

exports[`LocationPicker Component Success State should match snapshot in success state 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginBottom": 16,
          "textTransform": "uppercase",
        },
        {
          "color": "#768079",
        },
      ]
    }
  >
    LOCATION
  </Text>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 12,
          "flexDirection": "row",
          "gap": 12,
          "padding": 14,
        },
        {
          "backgroundColor": "#E9F1EB",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 12,
            "height": 40,
            "justifyContent": "center",
            "width": 40,
          },
          {
            "backgroundColor": "#DCEAE5",
          },
        ]
      }
    >
      <Ionicons
        color="#3F8C7A"
        name="location"
        size={20}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 12,
              "fontWeight": "500",
              "marginBottom": 2,
            },
            {
              "color": "#4A5751",
            },
          ]
        }
      >
        Meeting Location
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 15,
              "fontWeight": "500",
            },
            {
              "color": "#1A2520",
            },
          ]
        }
      >
        123 Main St, New York, NY 10001
      </Text>
    </View>
  </View>
</View>
`;

exports[`LocationPicker Component Success State should match snapshot in success state without location 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginBottom": 16,
          "textTransform": "uppercase",
        },
        {
          "color": "#768079",
        },
      ]
    }
  >
    LOCATION
  </Text>
</View>
`;
